<resources>
    <string name="app_name">Tipico Saludable</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="titulo_actividad_detalle">Actividad De Detalle</string>

    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="title_activity_actividad__detalle2">Actividad_Detalle2</string>
    <string name="title_activity_actividad_detalle2">ActividadDetalle2</string>
    <string name="btnañadirplato">¡Cómeme!</string>
    <string name="infocalorias">CALORIAS: </string>
    <string name="title_activity_menu__lateral">Tipico Saludable</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="NombreApp">Tipico Saludable</string>
    <string name="caloriasinfo">CALORIAS:</string>
    <string name="carboinfo">CARBOHIDRATOS:</string>
    <string name="proteinfo">PROTEINAS:</string>

    <string name="app_titleTope">ADVERTENCIA</string>
    <string name="app_titlePasada">PRECAUCIÓN</string>
    <string name="app_adverPasada"> ¿ DESEAS REALIZAR ACTIVIDAD FISICA ?</string>
    <string name="app_adverTope">¿ QUIERES SEGUIR CONSUMIENDO ALIMENTOS ?</string>
    <string name="app_continuar">CONTINUAR</string>
    <string name="app_cancelar">CANCELAR</string>
    <string name="app_realizar_ejercicio">REALIZAR EJERCICIO</string>
    <string name="app_baloncesto">Baloncesto</string>
    <string name="app_futbol">Futbol</string>
    <string name="app_patinaje">Patinaje</string>
    <string name="app_natacion">Natación</string>
    <string name="app_ciclismo">Ciclismo</string>
    <string name="app_marcha">Marcha</string>
    <string name="app_caminar">Caminar</string>
    <string name="app_zumba">Zumba</string>
    <string name="app_trote">Trotar</string>
    <string name="app_corre">Correr</string>
    <string name="app_pilates">Pilates</string>
    <string name="app_aerobicos">Aerobicos</string>
    <string name="app_spedd">Spinning</string>
    <string name="app_yoga">Yoga</string>
    <string name="app_step">Slep</string>
    <string name="app_jump">Saltos</string>
    <string name="app_tijera">Titere</string>
    <string name="app_sentadillas">Sentadillas</string>
    <string name="app_climber">Climber</string>
    <string name="app_burpees">Burpees</string>
    <string name="app_flexion_brazo">Flexion brazo</string>
    <string name="app_abd">Abd</string>
    //textos para deportes
    <string name="app_titere">Titere</string>
    <string name="app_salto_impulso">Salto impulso</string>

    //calorrias activity
    <string name="titulodat">Ingrese Datos</string>
    <string name="titulores">Resultado</string>
    <string name="medida1">Peso(Kg)</string>
    <string name="medida2">Talla(Cm)</string>
    <string name="medida3">Edad</string>
    <string name="genero">Hombre</string>
    <string name="generof">Mujer</string>
    <string name="contex1">Robusto</string>
    <string name="contex2">Medio</string>
    <string name="contex3">Delgado</string>
    <string name="act1">Sedentario</string>
    <string name="act2">Actividad Ligera 1/3 dìas</string>
    <string name="act3">Actividad Moderada 3/5 dìas</string>
    <string name="act4">Actividad Intensa 6/7 dìas</string>
    <string name="act5">Actividad Muy Intensa 2 entr/dìa</string>
    <string name="boton">Agregar</string>


    <string name="app_textoTope">Estas a punto de llegar al limite de tu alimentación diaria, recuerda que si quieres llegar a tu meta debes esforzarte.</string>
    <string name="app_textoPasada">Te has pasado de tu limite alimenticio diariario, puedes realizar una actividad fisica para asi llegar a tu meta. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Login Facebook
    <string name="facebook_app_id">307614969833324</string>
    <string name="fb_login_protocol_scheme">fb307614969833324</string>

    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>

    <string name="cantidad_a_consumir">¿Que Cantidad Quieres Comer?</string>
    <string name="btnaceptar">Aceptar</string>
    <string name="alimetosconsumidos">Hoy has comido los siguientes alimentos</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="ultimoconsumo">Hoy has consumido los siguientes alimentos</string>
    <string name="noconsumo">No has consumido nada hoy</string>
    <string name="app_realizar">REALIZAR</string>


    <string name="titulo_ejercicios">EJERCICIOS</string>
    <string name="brazo">Flexion brazo</string>
    <string name="saltos">Saltos</string>
    <string name="sentadillas">Sentadillas</string>
    <string name="titere">Titere</string>
    <string name="abd">Abd</string>
    <string name="burpes">Burpes</string>
    <string name="climber">Climber</string>
    <string name="salto">Salto impulso</string>

    <string name="titulo_actividad_fisica">ACTIVIDAD FISICA</string>
    <string name="marcha">Marcha</string>
    <string name="zumba">Zumba</string>
    <string name="pilates">Pilates</string>
    <string name="yoga">Yoga</string>
    <string name="step">Step</string>
    <string name="caminar">Caminar</string>
    <string name="trote">Trotar</string>
    <string name="aerobicos">Aerobicos</string>
    <string name="spininng">Spininng</string>

    <string name="titulo_deportes">DEPORTES</string>
    <string name="futbol">Futbol</string>
    <string name="balocesto">Baloncesto</string>
    <string name="natacion">Natacion</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="patinaje">Patinaje</string>

    <string name="Tiempo_duracion">Duracion en minutos :</string>
    <string name="Calorias">Calorias :</string>
    <string name="Hombre">Hombre -></string>
    <string name="Mujer">Mujer -></string>
    <string name="tituloreco">Deportes Recomendados</string>
    <string name="app_Omitir">Omitir</string>
    <string name="Limite_cal">Calorias max. por dia:</string>
    <string name="cal_per">0000</string>
    <string name="btncalcular">Calcular</string>

    //Cronometro

    <string name="Cronometro">Cronometro</string>
    <string name="Crono">00:00:000</string>

    //Acerca de

    <string name="tipico_de">Tipico Saludable</string>
    <string name="calificala">Califica nuestra aplicación</string>
    <string name="equipo">Nuestro  Equipo de Desarrollo</string>
    <string name="ficha1">(Sena) ADSI - 1493994</string>
    <string name="webs">WEBGRAFÍAS</string>
    <string name="comidas_titulo">Comidas</string>
    <string name="links_comidas">https://www.fatsecret.com</string>
    <string name="links_comidas2">http://productossanluis.com</string>
    <string name="link_comidas3">http://www.eluniversal.com</string>

    <string name="recetas_titulo">RECETAS</string>
    <string name="fuentes">Fuentes</string>
    <string name="link_recetas">http://www.eltoquecolombiano.com</string>
    <string name="link_recetas2">https://www.recetasgratis.net</string>
    <string name="link_recetas3">https://www.mycolombianrecipes.com</string>

    <string name="copy_tipico">Típico Saludable - Todos los derechos reservados ©  - v 1.0</string>
    <string name="version">v 1.0</string>
    <string name="caloras_consu">Cal. Consumidas</string>
    <string name="titulo_inicio">Informacion</string>
    <string name="Cantidad">Felicidades has quemadi un total de 101</string>

    // perfil

    <string name="actividad">Actividad Fisica</string>
    <string name="calmax">Calorias Maximas</string>
    <string name="contextura">Contextura</string>
    <string name="edad">Edad</string>
    <string name="gener">Genero</string>
    <string name="imc">Imc</string>
    <string name="talla">Talla</string>
    <string name="peso">Peso</string>
    <string name="edadn">18+</string>
    <string name="cerrars">Cerrar Sesion</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="comidas">Antojos</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="Afisica">Act. fisica</string>
    <string name="deportes">Deportes</string>


</resources>
