<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sanchez.tipicosaludable.AcercaDeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondodos">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipico_de"
        android:gravity="center"
        android:layout_margin="4dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp"/>

        <TextView
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/negro"
            android:textSize="17sp"
            android:text="@string/equipo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ficha1"
            android:textSize="14sp"
            android:textColor="@color/background_footer"
            android:layout_margin="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:textSize="19sp"
            android:text="@string/webs"
            android:textColor="@color/naranja"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comidas_titulo"
            android:textSize="17sp"
            android:textColor="@color/negro"
            android:layout_marginTop="-6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/links_comidas"
            android:layout_margin="4dp"
            android:textColor="@color/background_footer"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/links_comidas2"
            android:layout_margin="3dp"
            android:textColor="@color/background_footer"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_comidas3"
            android:layout_margin="4dp"
            android:textSize="14sp"
            android:textColor="@color/background_footer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:textSize="19sp"
            android:text="@string/recetas_titulo"
            android:textColor="@color/naranja"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuentes"
            android:textColor="@color/negro"
            android:textSize="17sp"
            android:layout_marginTop="-6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_recetas"
            android:textColor="@color/background_footer"
            android:layout_margin="4dp"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_recetas2"
            android:textColor="@color/background_footer"
            android:layout_margin="4dp"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_recetas3"
            android:textColor="@color/background_footer"
            android:layout_margin="4dp"
            android:textSize="14sp"/>

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_tipico"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="0dp"
            android:textAlignment="center"/>-->


    </LinearLayout>
</FrameLayout>
