<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.oscar.implementar.Inicio"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:fontFamily="@font/"
            android:gravity="center"
            android:text="@string/titulodat"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medida1"
                android:id="@+id/peso"
                android:gravity="center"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medida2"
                android:gravity="center"
                android:id="@+id/talla"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medida3"
                android:id="@+id/edad"
                android:gravity="center"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Genero:"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

        <RadioGroup
            android:id="@+id/genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/gfem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generof" />

            <RadioButton
                android:id="@+id/gmen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genero" />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Actividad:"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/actividad">

            <RadioButton
                android:id="@+id/act1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/act1" />

            <RadioButton
                android:id="@+id/act2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/act2" />

            <RadioButton
                android:id="@+id/act3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/act3" />

            <RadioButton
                android:id="@+id/act4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/act4" />

            <RadioButton
                android:id="@+id/act5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/act5" />
        </RadioGroup>

        <Button
            android:id="@+id/validar"
            style="@android:style/Widget.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/boton" />
    </LinearLayout>
</ScrollView>