<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment_Perfil"
    android:background="@drawable/login2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fotop"
            android:layout_width="91dp"
            android:layout_height="82dp"
            android:layout_margin="8dp"
            android:background="@color/colorAccent" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/txtCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:layout_marginLeft="20sp"
                android:textColor="#000"/>


            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/txtId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"
                android:textColor="#000"
                />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/actividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actividad"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/calmax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calmax"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/contextura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contextura"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gener"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:id="@+id/imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:id="@+id/talla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/talla"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />


    <Button
        android:id="@+id/btnlogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"/>

    </LinearLayout>

</ScrollView>