<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sanchez.tipicosaludable.Fragment_Detalle">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/imagen_extendida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/nombre_transicion_imagen">

        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infocalorias"
            android:textSize="26sp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:id="@+id/informacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""

            android:textSize="20sp"
            />
        <Button
            android:id="@+id/btnconsumodealimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnañadirplato"

            />


    </LinearLayout>


</FrameLayout>
